--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -6,8 +6,8 @@
       </h4>
     </div>
   </div>
-  <div class="row">
-    <div class="col justify-content-center">
+  <div class="row justify-content-center">
+    <div class="col">
       <table class="table">
         <thead class="thead-light">
           <tr>
