--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="row">
     <% @items.each do |item| %>
-      <div class="card col-md-3 bg-light rounded shadow-sm p-3">
+      <div class="card col-md-3 rounded shadow-sm p-3">
         <%= link_to item_path(item.id) do %>
           <%= image_tag item.get_image(190,190),class: "card-img-top"; %>
         <% end %>
