--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,39 +1,43 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文履歴一覧</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        注文履歴一覧
+      </h4>
     </div>
   </div>
-  <div class="row">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>注文日</th>
-          <th>配送先</th>
-          <th>注文商品</th>
-          <th>支払金額</th>
-          <th>ステータス</th>
-          <th>注文詳細</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @orders.each do |order| %>
+  <div class="row justify-content-center">
+    <div class="col">
+      <table class="table">
+        <thead class="thead-light">
           <tr>
-            <td class="align-middle"><%= order.created_at.strftime('%Y/%m/%d') %></td>
-            <td class="align-middle">
-              〒<%= order.postal_code %><br>
-              <%= order.address %><br>
-              <%= order.name %>
-            </td>
-            <td class="align-middle">
-              <% order.order_details.each do |order_detail| %>
-                <%= order_detail.item.name %><br>
-              <% end %>
-            </td>
-            <td class="align-middle"><%= order.total_payment %></td>
-            <td class="align-middle"><%= order.status %></td>
-            <td class="align-middle"><%= link_to "表示する",order_path(order.id),class: "btn btn-primary p-2" %></td>
+            <th scope="col" class="bg border border-dark align-middle">注文日</th>
+            <th scope="col" class="bg border border-dark align-middle">配送先</th>
+            <th scope="col" class="bg border border-dark align-middle">注文商品</th>
+            <th scope="col" class="bg border border-dark align-middle">支払金額</th>
+            <th scope="col" class="bg border border-dark align-middle">ステータス</th>
+            <th scope="col" class="bg border border-dark align-middle">注文詳細</th>
           </tr>
-      </tbody>
-    </table>
+        </thead>
+        <tbody class="position-relative">
+          <% @orders.each do |order| %>
+            <tr>
+              <td class="border border-dark align-middle"><%= order.created_at.strftime('%Y/%m/%d') %></td>
+              <td class="border border-dark align-middle">
+                <%= order.address_history_display %>
+              </td>
+              <td class="border border-dark align-middle h-25 position-sticky">
+                <% order.order_details.each do |order_detail| %>
+                  <%= order_detail.item.name %><br>
+                <% end %>
+              </td>
+              <td class="border border-dark align-middle"><%= number_to_currency(order.total_payment) %></td>
+              <td class="border border-dark align-middle"><%= order.status %></td>
+              <td class="border border-dark align-middle"><%= link_to "表示する",order_path(order.id),class: "btn btn-primary p-2" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
+</div>
