--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,68 +1,82 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文情報入力</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        注文情報入力
+      </h4>
     </div>
   </div>
-  <%= form_with model: @order, url: comfirm_orders_path, method: :post do |f| %>
-    <div class="row">
-      <strong>支払方法</strong>
-      <div class="custom-control custom-radio ml-1">
-        <%= f.radio_button :payment_method, Order.payment_methods.key(0), class: "custom-control-input" %>
-        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card], class: "custom-control-label" %>
-      </div>
-      <div class="custom-control custom-radio ml-1">
-        <%= f.radio_button :payment_method, Order.payment_methods.key(1), class: "custom-control-label" %>
-        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer], class: "custom-control-label" %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="custom-control custom-radio ml-1">
-        <%= f.radio_button :select_address, "0" , class: "custom-control-input" %>
-        <%= f.label "ご自身の住所", class: "custom-control-label" %>
-        <div class="ml-2">
-          <%= current_customer.address_display %><br>
-          <%= current_customer.last_name %><%= current_customer.first_name %>
-        </div>
-      </div>
-      <div class="custom-control custom-radio ml-1">
-        <%= f.radio_button :select_address, "1" , class: "custom-control-input" %>
-        <%= f.label "登録済みの住所から選択", class: "custom-control-label" %>
-        <div class="ml-2">
-          <%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :address_display),class: "custom-select" %>
-        </div>
-      </div>
-      <div class="custom-control custom-radio ml-1">
-        <%= f.radio_button :select_address, "2" , class: "custom-control-input" %>
-        <%= f.label "新しいお届け先", class: "custom-control-label" %>
-        <div class="row form-group">
-          <div class="col-3">
+    <%= form_with model: @order, url: comfirm_orders_path, method: :post do |f| %>
+      <div class="font-weight-bold h5">支払方法</div>
+      <ul class="list-group-flush">
+        <li class="list-group-item py-0 border-0 form-check">
+          <%= f.radio_button :payment_method, Order.payment_methods.key(0), class: "form-check-input" %>
+          <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card], class: "form-check-label" %>
+        </li>
+        <li class="list-group-item py-0 border-0 form-check">
+          <%= f.radio_button :payment_method, Order.payment_methods.key(1), class: "form-check-input" %>
+          <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer], class: "form-check-label" %>
+        </li>
+      </ul>
+      <div class="font-weight-bold h5">配送方法</div>
+      <ul class="list-group-flush">
+        <li class="list-group-item py-0 border-0 form-check">
+        <%= f.radio_button :select_address, "0" , class: "form-check-input" %>
+        <%= f.label "ご自身の住所", class: "form-check-label" %>
+        </li>
+        <ul class="list-group-flush">
+          <li class="list-group-item py-0 border-0 form-check">
+            <%= current_customer.address_display %><br>
+            <%= current_customer.last_name %><%= current_customer.first_name %>
+          </li>
+        </ul>
+      </ul>
+      <ul class="list-group-flush">
+        <li class="list-group-item py-0 border-0 form-check">
+        <%= f.radio_button :select_address, "1" , class: "form-check-input" %>
+        <%= f.label "登録済みの住所から選択", class: "form-check-label" %>
+        </li>
+        <ul class="list-group-flush">
+          <li class="list-group-item py-0 m-0 border-0 form-group">
+            <%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :address_display),prompt: "住所選択",class: "form-control" %>
+          </li>
+        </ul>
+      </ul>
+      <ul class="list-group-flush">
+        <li class="list-group-item py-0 border-0 form-check">
+          <%= f.radio_button :select_address, "2" , class: "form-check-input" %>
+          <%= f.label "新しいお届け先", class: "form-check-label" %>
+        </li>
+        <ul class="list-group-flush">
+          <li class="list-group-item py-0 m-0 border-0 form-group">
             <%= f.label :"郵便番号(ハイフンなし)" %>
-          </div>
-          <div class="col-3">
-            <%= f.text_field :postal_code,autofocus: true,placeholder:"郵便番号",class: "form-control form-control-sm" %>
-          </div>
-        </div>
-        <div class="row form-group">
-          <div class="col-3">
+          </li>
+          <ul class="list-group-flush">
+            <li class="list-group-item py-0 m-0 border-0 form-group">
+              <%= f.text_field :postal_code,autofocus: true,placeholder:"郵便番号",class: "form-control form-control-sm col-md-3 col-sm-6" %>
+            </li>
+          </ul>
+          <li class="list-group-item py-0 m-0 border-0 form-group">
             <%= f.label :"住所" %>
-          </div>
-          <div class="col-6">
-            <%= f.text_field :address,autofocus: true,placeholder:"住所",class: "form-control form-control-sm" %>
-          </div>
-        </div>
-        <div class="row form-group">
-          <div class="col-3">
+          </li>
+          <ul class="list-group-flush">
+            <li class="list-group-item py-0 m-0 border-0 form-group">
+              <%= f.text_field :address,autofocus: true,placeholder:"住所",class: "form-control form-control-sm col-md-6" %>
+            </li>
+          </ul>
+          <li class="list-group-item py-0 m-0 border-0 form-group">
             <%= f.label :"宛名" %>
-          </div>
-          <div class="col-3">
-            <%= f.text_field :name,autofocus: true,placeholder:"名前",class: "form-control form-control-sm" %>
-          </div>
-        </div>
+          </li>
+          <ul class="list-group-flush">
+            <li class="list-group-item py-0 m-0 border-0 form-group">
+              <%= f.text_field :name,autofocus: true,placeholder:"名前",class: "form-control form-control-sm col-md-3 col-sm-6" %>
+            </li>
+          </ul>
+        </ul>
+      </ul>
+      <div class="row justify-content-center">
+        <%= f.submit "確認画面に進む", class: "btn btn-primary" %>
       </div>
-    </div>
-    <div class="row justify-content-center">
-      <%= f.submit "確認画面に進む", class: "btn btn-primary" %>
-    </div>
-  <% end %>
+    <% end %>
+
 </div>
