--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文情報確認</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        注文情報確認
+      </h4>
     </div>
   </div>
   <div class="row">
-    <div class="col-8">
-    <table class="table ">
+    <div class="col-md-8">
+    <table class="table">
         <thead>
           <th>商品名</th>
           <th>単価(税込)</th>
@@ -16,7 +18,7 @@
         <tbody>
           <% @cart_items.each do |cart_item| %>
             <tr>
-              <td><%= cart_item_item.get_image(100,100) %><%= cart_item.item.name %></td>
+              <td><%= image_tag cart_item.item.get_image(50,50),class: "rounded-circle mx-2" %><%= cart_item.item.name %></td>
               <td><%= cart_item.item.with_tax_price %></td>
               <td><%= cart_item.amount %></td>
               <td><%= cart_item.sub_total %></td>
@@ -25,46 +27,47 @@
         </tbody>
       </table>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <table class="table">
         <tbody>
           <tr>
-            <td class="bg-secondary align-middle">商品合計</td>
-            <td class="align-middle"><%= @order.total_payment %></td>
+            <th scope="col" class="bg border border-dark pr-0 align_middle">商品合計</th>
+            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@total) %></td>
           </tr>
           <tr>
-            <td class="bg-secondary align-middle">配送料</td>
-            <td class="align-middle"><%= @order.postage %></td>
+            <th scope="col" class="bg border border-dark pr-0 align_middle">配送料</th>
+            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@postage) %></td>
           </tr>
           <tr>
-            <td class="bg-secondary align-middle">ご請求額</td>
-            <td class="align-middle"><%= @order.billing_total %></td>
+            <th scope="col" class="bg border border-dark pr-0 align_middle">ご請求額</th>
+            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@total_payment) %></td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
   <div class="row">
-    <ul class="list-group">
+    <ul class="list-group-flush">
+      <strong>支払方法</strong>
       <li class="list-group-item">
-        <strong>支払方法</strong>
-        <%= @order.payment_method %>
+        <%= @order.payment_method_i18n %>
       </li>
+      <strong>お届け先</strong>
       <li class="list-group-item">
-        <strong>お届け先</strong>
         <%= @order.address_display %><br>
         <%= @order.name %>
       </li>
     </ul>
-    <div class="row">
+    </div>
+    <div class="row justify-content-center">
       <%= form_with model: @order, url: orders_path, method: :post do |f|%>
-        <%= f.hidden_field :postage, :value => "800" %>
-        <%= f.hidden_field :total_payment, :value => @total %>
+        <%= f.hidden_field :postage, :value => @postage %>
+        <%= f.hidden_field :total_payment, :value => @total_payment %>
         <%= f.hidden_field :payment_method %>
         <%= f.hidden_field :postal_code %>
         <%= f.hidden_field :address %>
         <%= f.hidden_field :name %>
         <%= f.submit '注文を確定する', class:'btn btn-lg btn-success'%>
       <% end %>
-    </div>
   </div>
+</div>
