--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -24,7 +24,7 @@
             <tr>
               <td class="border border-dark align-middle"><%= order.created_at.strftime('%Y/%m/%d') %></td>
               <td class="border border-dark align-middle">
-                <%= order.address_history_display %>
+                <%= order.address_display %>
               </td>
               <td class="border border-dark align-middle h-25 position-sticky">
                 <% order.order_details.each do |order_detail| %>
@@ -32,7 +32,7 @@
                 <% end %>
               </td>
               <td class="border border-dark align-middle"><%= number_to_currency(order.total_payment) %></td>
-              <td class="border border-dark align-middle"><%= order.status %></td>
+              <td class="border border-dark align-middle"><%= order.status_i18n %></td>
               <td class="border border-dark align-middle"><%= link_to "表示する",order_path(order.id),class: "btn btn-primary p-2" %></td>
             </tr>
           <% end %>
