--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文履歴詳細</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        注文履歴詳細
+      </h4>
     </div>
   </div>
   <div class="row mt-3">
@@ -23,11 +25,11 @@
           </tr>
           <tr>
             <th scope="col" class="bg border border-dark pr-0 align-middle">支払方法</th>
-            <td class="border border-dark pr-5 align-middle"><%= @order.payment_method %></td>
+            <td class="border border-dark pr-5 align-middle"><%= @order.payment_method_i18n %></td>
           </tr>
           <tr>
             <th scope="col" class="bg border border-dark pr-0 align-middle">ステータス</th>
-            <td class="border border-dark pr-5 align-middle"><%= @order.status %></td>
+            <td class="border border-dark pr-5 align-middle"><%= @order.status_i18n %></td>
           </tr>
         </tbody>
       </table>
@@ -38,7 +40,7 @@
         <tbody>
           <tr>
             <th scope="col" class="bg border border-dark pr-0 align-middle">商品合計</th>
-            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@order.total_payment) %></td>
+            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@total) %></td>
           </tr>
           <tr>
             <th scope="col" class="bg border border-dark pr-0 align-middle">配送料</th>
@@ -46,7 +48,7 @@
           </tr>
           <tr>
             <th scope="col" class="bg border border-dark pr-0 align-middle">ご請求額</th>
-            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@order.billing_total) %></td>
+            <td class="border border-dark pr-5 align-middle"><%= number_to_currency(@order.total_payment) %></td>
           </tr>
         </tbody>
       </table>
@@ -71,8 +73,10 @@
             <td class="border border-dark align-middle"><%= order_detail.amount %></td>
             <td class="border border-dark align-middle"><%= number_to_currency(order_detail.sub_total) %></td>
           </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
   </div>
 </div>
+
