--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -8,8 +8,8 @@
         退会する場合は、「退会する」をクリックしてください。<br>
       </span>
       <div class="my-5">
-        <span class="mx-2"><%= link_to "削除しない",mypage_path(@customer.id),class: "btn btn-primary" %></span>
-        <span class="mx-2"><%= link_to "削除する",withdraw_path,method: :patch,"data-confirm" =>"本当によろしいですか?",class: "btn btn-danger" %></span>
+        <span class="mx-2"><%= link_to "退会しない",mypage_path(@customer.id),class: "btn btn-primary" %></span>
+        <span class="mx-2"><%= link_to "退会する",withdraw_path,method: :patch,"data-confirm" =>"本当によろしいですか?",class: "btn btn-danger" %></span>
       </div>
     </div>
   </div>
