--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @customer,url: update_information_path,method: :patch do |f| %>
+  <%= render "public/shared/error_messages", resource: @customer %>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
@@ -66,7 +67,7 @@
     </div>
     <div class="row form_group justify-content-center">
         <%= f.submit "変更を保存",class: "btn btn-success px-5 mx-5 mb-sm-3" %>
-        <%= link_to "削除する",confirm_customers_path,class: "btn btn-danger px-5 mx-5 mb-sm-3" %>
+        <%= link_to "退会する",confirm_customers_path,class: "btn btn-danger px-5 mx-5 mb-sm-3" %>
     </div>
   <% end %>
 </div>
