--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @genre,url: admin_genre_path,method: :patch do |f| %>
+  <%= render "admin/shared/error_messages", resource: @genre %>
     <div class="row align-items-center form-group">
       <span class="col-sm-auto my-1">
         <%= f.label "ジャンル名",class: "form-label" %>
