--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @item,url: admin_item_path(@item.id),method: :patch do |f| %>
+  <%= render "admin/shared/error_messages", resource: @item %>
     <div class="row form-group justify-content-center">
       <span class="col-lg-2 col-md-4">
         <%= f.label "商品画像" ,class: "form-label" %>
