--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -29,7 +29,7 @@
               <td><%= item.id %></td>
               <td>
                 <%= link_to admin_item_path(item.id) do %>
-                  <%= item.name.truncate(10) %>
+                  <%= item.name %>
                 <% end %>
               </td>
               <td><%= number_to_currency(item.price)  %></td>
