--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @item,url: admin_items_path, method: :post do |f| %>
+  <%= render "admin/shared/error_messages", resource: @item %>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "商品画像" ,class: "form-label" %>
