--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @address,url: addresses_path,method: :patch do |f| %>
+  <%= render "public/shared/error_messages", resource: @address %>
   <div class="row form-group">
     <div class="col-lg-3 col-md-4">
       <%= f.label "郵便番号(ハイフンなし)" %>
