--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center my-5">
+    <h1 class="display-2 font-weight-bold">
+      About
+    </h1>
+  </div>
+  <div class="row justify-content-center">
+    <h5 class="font-weight-bold text-center">
+      ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+      お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+      様々なバリエーションをご用意しております。<br>
+      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+      ぜひご注文ください。
+    </h5>
+  </div>
+  <div class="row justify-content-center my-4">
+    <%= image_tag 'free_cake.jpg',size: '800x400'%>
+  </div>
+</div>
