--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -7,6 +7,7 @@
     </div>
   </div>
   <%= form_with model: @customer,url:  customer_registration_path do |f| %>
+  <%= render "public/shared/error_messages", resource: @customer %>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
