--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -16,7 +16,7 @@
         <%= f.text_field :name,autofocus: true,placeholder: "ジャンル名",class: "form-label" %>
       </span>
       <span class="col-sm-auto my-1">
-        <%= f.submit "新規登録",class: "btn btn-success px-5" %>
+        <%= f.submit "変更を保存",class: "btn btn-success px-5" %>
       </span>
     </div>
   <% end %>
