--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,13 +36,13 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to(items_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-users"></i>
+                   <i class="fas fa-birthday-cake"></i>
                    <span>商品一覧</span>
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to(cart_items_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-book-open"></i>
+                   <i class="fas fa-shopping-cart"></i>
                    <span>カート</span>
                   <% end %>
                 </li>
@@ -55,7 +55,7 @@
               <% elsif admin_signed_in? %>
                 <li class="nav-item">
                   <%= link_to(admin_items_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-home"></i>
+                   <i class="fas fa-birthday-cake"></i>
                    <span>商品一覧</span>
                   <% end %>
                 </li>
@@ -67,13 +67,13 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to(admin_root_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-book-open"></i>
+                   <i class="fas fa-folder-open"></i>
                    <span>注文履歴一覧</span>
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to(admin_genres_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-book-open"></i>
+                   <i class="fas fa-gift"></i>
                    <span>ジャンル一覧</span>
                   <% end %>
                 </li>
@@ -86,13 +86,13 @@
               <% else %>
                 <li class="nav-item">
                   <%= link_to(about_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-home"></i>
+                   <i class="far fa-meh-blank"></i>
                    <span>About</span>
                   <% end %>
                 </li>
                 <li class="nav-item">
                   <%= link_to(items_path,class: "nav-link text-white") do %>
-                   <i class="fas fa-link"></i>
+                   <i class="fas fa-birthday-cake"></i>
                    <span>商品一覧</span>
                   <% end %>
                 </li>
