--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -26,5 +26,8 @@
       </div>
     <% end %>
   </div>
+  <div class="row justify-content-center m-5">
+    <%= paginate @items %>
+  </div>
 </div>
 
