--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -40,4 +40,7 @@
       </table>
     </div>
   </div>
+  <div class="row justify-content-center m-5">
+    <%= paginate @orders %>
+  </div>
 </div>
